--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/t4top/lucky-smileys/issues"
   },
-  "homepage": "https://github.com/t4top/lucky-smileys#readme"
+  "homepage": "https://github.com/t4top/lucky-smileys#readme",
+  "devDependencies": {
+    "prettier": "^2.7.1"
+  }
 }
