--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "t4top@aztemi",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite --host 0.0.0.0 --port 8080",
+    "build": "vite build --emptyOutDir",
+    "preview": "vite preview --host 0.0.0.0 --port 8080"
   },
   "repository": {
     "type": "git",
@@ -23,6 +26,8 @@
   },
   "homepage": "https://github.com/t4top/lucky-smileys#readme",
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "@vitejs/plugin-legacy": "^2.0.0",
+    "prettier": "^2.7.1",
+    "vite": "^3.0.4"
   }
 }
