--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "homepage": "https://github.com/t4top/lucky-smileys#readme",
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.0.0",
-    "prettier": "^2.7.1",
     "vite": "^3.0.4"
+  },
+  "dependencies": {
+    "ethers": "^5.6.9"
   }
 }
