--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@vitejs/plugin-legacy": "^2.0.0",
     "prettier": "^2.7.1",
+    "stylus": "^0.58.1",
     "vite": "^3.0.4"
   }
 }
