--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "prettier": "^2.7.1",
     "stylus": "^0.58.1",
     "vite": "^3.0.4"
+  },
+  "dependencies": {
+    "ethers": "^5.6.9"
   }
 }
